my final project draft

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,27 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CareerGuide</title>
-
-    <link rel="stylesheet" href="style/output.css">
-
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-
-        .transition-smooth {
-            transition-property: all;
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-duration: 300ms;
-        }
-    </style>
+    <title>About CareerGuide</title>
+    <link rel="stylesheet" href="../style/output.css">
 </head>
 
-<body>
-    <nav class="sticky top-0 z-50 bg-card/95 bg-white box border-spacing-x-0.5 shadow-[0px_0.3px_4px_green]">
+<body class="min-h-screen bg-background">
+     <nav class="sticky top-0 z-50 bg-card/95 bg-white box border-spacing-x-0.5 shadow-[0px_0.3px_4px_green]">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <!-- Logo -->
@@ -43,27 +28,27 @@
 
                 <!-- Desktop Navigation -->
                 <div class="hidden lg:flex items-center space-x-1">
-                    <a href="#"
-                        class="px-3 py-2 rounded-md text-sm font-medium  transition-smooth bg-green-800 text-white ">
+                    <a href="../index.html"
+                        class="px-3 py-2 rounded-md text-sm font-medium  transition-smooth hover:bg-green-800 hover:text-white ">
                         Home
                     </a>
-                    <a href="pages/career.html"
+                    <a href="career.html"
                         class="px-3 py-2 rounded-md text-sm font-medium  transition-smooth hover:bg-green-800 hover:text-white">
                         Career Paths
                     </a>
-                    <a href="pages/skills.html"
+                    <a href="skills.html"
                         class="px-3 py-2 rounded-md text-sm font-medium   transition-smooth hover:bg-green-800 hover:text-white">
                         Skills
                     </a>
-                    <a href="pages/Counseling.html"
+                    <a href="Counseling.html"
                         class="px-3 py-2 rounded-md text-sm font-medium transition-smooth hover:bg-green-800 hover:text-white">
                         Counseling
                     </a>
-                    <a href="pages/about.html"
-                        class="px-3 py-2 rounded-md text-sm font-medium transition-smooth hover:bg-green-800 hover:text-white">
+                    <a href="#"
+                        class="px-3 py-2 rounded-md text-sm font-medium transition-smooth bg-green-800 text-white">
                         About Us
                     </a>
-                    <a href="pages/contact.html"
+                    <a href="contact.html"
                         class="px-3 py-2 rounded-md text-sm font-medium transition-smooth hover:bg-green-800 hover:text-white">
                         Contact
                     </a>
@@ -98,27 +83,27 @@
 
             <div id="mobile-menu" class="lg:hidden border-t border-border hidden">
                 <div class="px-2 pt-2 pb-3 space-y-1">
-                    <a href="#"
-                        class="block px-3 py-2 rounded-md font-medium transition-smooth bg-green-800 text-white">
+                    <a href="../index.html"
+                        class="block px-3 py-2 rounded-md font-medium transition-smooth hover:bg-green-800 hover:text-white">
                         Home
                     </a>
-                    <a href="pages/career.html"
+                    <a href="career.html"
                         class="block px-3 py-2 rounded-md text-base font-medium transition-smooth hover:bg-green-800 hover:text-white">
                         Career Paths
                     </a>
-                    <a href="pages/skills.html"
+                    <a href="skills.html"
                         class="block px-3 py-2 rounded-md text-base font-medium transition-smooth hover:bg-green-800 hover:text-white">
                         Skills
                     </a>
-                    <a href="pages/Counseling.html"
+                    <a href="Counseling.html"
                         class="block px-3 py-2 rounded-md text-base font-medium transition-smooth hover:bg-green-800 hover:text-white">
                         Counseling
                     </a>
-                    <a href="pages/about.html"
-                        class="block px-3 py-2 rounded-md text-base font-medium transition-smooth hover:bg-green-800 hover:text-white">
+                    <a href="#"
+                        class="block px-3 py-2 rounded-md text-base font-medium transition-smooth bg-green-800 text-white">
                         About Us
                     </a>
-                    <a href="pages/contact.html"
+                    <a href="contact.html"
                         class="block px-3 py-2 rounded-md text-base font-medium transition-smooth hover:bg-green-800 hover:text-white">
                         Contact
                     </a>
@@ -132,178 +117,121 @@
             </div>
         </div>
     </nav>
+    <div class="min-h-screen bg-background py-12">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- Header -->
+            <div class="text-center space-y-6 mb-16">
+                <h1 class="text-4xl sm:text-5xl text-green-700 font-bold   ">
+                    About CareerGuide
+                </h1>
+                <p class="text-xl text-muted-foreground max-w-3xl mx-auto">
+                    Empowering students and professionals to make informed career decisions through
+                    expert guidance, comprehensive resources, and personalized support.
+                </p>
+            </div>
 
-
-    <section>
-        <div class="relative  overflow-hidden bg-gradient-to-r from-black to-green-600 text-white h-auto p-5 md:p-15 lg:25">
-            <div class="  grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-                <div>
-                    <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold leading-tight ">Discover Your <br>
-                        <span class="text-green-500">Dream Career</span>
-                    </h1>
-                    <p class=" font-bold">Navigate your professional journey with confidence. Explore career paths,
-                        develop essential skills,
-                        and get expert guidance to achieve your goals.</p>
-                    <div class=" mt-15 flex gap-6">
-                        <a href="#" class="bg-white text-green-600 p-3.5 rounded-2xl hover:">Explore Careers </a>
-                        <a href="" class="p-3.5 rounded-2xl hover:bg-green-600 *:text-black">Get Counseling</a>
+            <!-- Mission & Vision -->
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-16">
+                <div class="border-0 shadow rounded-lg overflow-hidden">
+                    <div class="p-6 text-center">
+                        <img src="../assets/aim.png" alt="" class="h-12 w-12 mx-auto mb-4">
+                        <h3 class="text-2xl font-semibold">Our Mission</h3>
+                    </div>
+                    <div class="p-6 pt-0">
+                        <p class="text-center text-muted-foreground text-base leading-relaxed">
+                            To democratize career guidance by providing accessible, personalized, and
+                            evidence-based career counseling services that help individuals discover
+                            their potential and achieve their professional goals.
+                        </p>
                     </div>
                 </div>
-                <div class="w-auto rounded-full ">
-                    <img src="assets/students-img.jpg" alt="" class="rounded-md">
-                </div>
 
-
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="flex flex-col justify-center items-center m-20">
-            <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold leading-tight text-green-600 m-4">Why Choose
-                CareerGuide?</h1>
-            <p class="">We provide comprehensive career guidance and resources to help you make informed decisions about
-                your professional future.</p>
-
-        </div>
-    </section>
-
-    <main>
-        <div class="grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 gap-7 m-10 md:mx-30">
-            <div
-                class=" shadow h-auto hover:shadow-[0px_0.1px_4px_green] justify-center items-center px-12 py-9 flex flex-col gap-5 rounded-sm">
-                <div class="bg-gray-50 w-fit p-1.5 rounded-2xl">
-                    <img src="assets/aim.png" alt="" class="w-9">
-                </div>
-                <div class="flex flex-col gap-5 justify-center items-center">
-                    <h3 class="text-xl font-bold text-green-600">Career Exploration</h3>
-                    <p class="text-green-900">Discover various career paths across different industries and find your
-                        perfect match.</p>
-                </div>
-
-            </div>
-            <div
-                class=" shadow h-auto hover:shadow-[0px_0.1px_4px_green] justify-center items-center px-12 py-9 flex flex-col gap-5 rounded-sm">
-                <div class="bg-gray-50 w-fit p-1.5 rounded-2xl">
-                    <img src="assets/book.png" alt="" class="w-9">
-                </div>
-                <div class="flex flex-col gap-5 justify-center items-center">
-                    <h3 class="text-xl font-bold text-green-600">Skill Development</h3>
-                    <p class="text-green-900">Learn about essential skills and create personalized roadmaps for your
-                        career growth.</p>
-                </div>
-
-            </div>
-            <div
-                class=" shadow h-auto hover:shadow-[0px_0.1px_4px_green] justify-center items-center px-12 py-9 flex flex-col gap-5 rounded-sm">
-                <div class="bg-gray-50 w-fit p-1.5 rounded-2xl">
-                    <img src="assets/person.png" alt="" class="w-9">
-                </div>
-                <div class="flex flex-col gap-5 justify-center items-center">
-                    <h3 class="text-xl font-bold text-green-600">Expert Guidance</h3>
-                    <p class="text-green-900">Get professional counseling and mentorship from experienced career
-                        advisors.</p>
-                </div>
-
-            </div>
-
-
-        </div>
-        </div>
-    </main>
-
-    <section>
-        <div
-            class=" bg-gradient-to-r from-black to-green-600 text-white  grid grid-cols-2 md:grid-cols-4 py-15 px-15 lg:px-30 gap-8">
-            <div class="flex flex-col justify-center items-center">
-                <h1 class="font-bold text-3xl">10,000+</h1>
-                <p class="text-sm">Students Guided</p>
-            </div>
-            <div class="flex flex-col justify-center items-center">
-                <h1 class="font-bold text-3xl">500+</h1>
-                <p class="text-sm">Career Paths</p>
-            </div>
-            <div class="flex flex-col justify-center items-center">
-                <h1 class="font-bold text-3xl">50+</h1>
-                <p class="text-sm">Industry Partners</p>
-            </div>
-            <div class="flex flex-col justify-center items-center">
-                <h1 class="font-bold text-3xl">95%</h1>
-                <p class="text-sm">Success Rate</p>
-            </div>
-        </div>
-    </section>
-
-
-
-    <section>
-        <div class="flex flex-col justify-center items-center m-20">
-            <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold leading-tight text-green-600 m-4">Start Your Journey
-            </h1>
-            <p class="">Choose your path and begin exploring your future today</p>
-
-        </div>
-    </section>
-
-    <main>
-        <div class="grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 gap-7 m-10 md:mx-30">
-            <div
-                class=" shadow h-auto hover:shadow-[0px_0.1px_4px_green]  items-center px-12 py-9 flex flex-col gap-5 rounded-sm">
-                <div class="flex gap-4  items-center">
-                    <div class="bg-gray-50 w-fit p-1.5 rounded-2xl">
-                        <img src="assets/aim.png" alt="" class="w-9">
-
+                <div class="border-0 shadow rounded-lg overflow-hidden">
+                    <div class="p-6 text-center">
+                        <img src="../assets/vission.png" alt="" class="h-12 w-12 mx-auto mb-4">
+                        <h3 class="text-2xl font-semibold">Our Vision</h3>
                     </div>
-                    <h3 class="text-xl font-bold text-green-600">Explore Careers
-                    </h3>
-                </div>
-                <div class="">
-                    <p class="text-green-900 text-sm">Browse different industries and job roles</p>
-                </div>
-
-            </div>
-            <div
-                class=" shadow h-auto hover:shadow-[0px_0.1px_4px_green]  items-center px-12 py-9 flex flex-col gap-5 rounded-sm">
-                <div class="flex gap-4  items-center">
-                    <div class="bg-gray-50 w-fit p-1.5 rounded-2xl">
-                        <img src="assets/aim.png" alt="" class="w-9">
-
+                    <div class="p-6 pt-0">
+                        <p class="text-center text-muted-foreground text-base leading-relaxed">
+                            To create a world where every individual has access to quality career
+                            guidance, enabling them to make informed decisions about their education
+                            and career path, leading to fulfilling and successful professional lives.
+                        </p>
                     </div>
-                    <h3 class="text-xl font-bold text-green-600">Build Skills
-
-                    </h3>
                 </div>
-                <div class="">
-                    <p class="text-green-900 text-sm">Create your personalized learning roadmap</p>
-                </div>
-
             </div>
-            <div
-                class=" shadow h-auto hover:shadow-[0px_0.1px_4px_green]  items-center px-12 py-9 flex flex-col gap-5 rounded-sm">
-                <div class="flex  items-center">
-                    <div class="bg-gray-50 w-fit p-1.5 rounded-2xl">
-                        <img src="assets/aim.png" alt="" class="w-9">
 
+
+
+            <!-- Values Section -->
+            <div class="mb-16">
+                <div class="text-center space-y-4 mb-12">
+                    <h2 class="text-3xl font-bold text-green-700 text-foreground">Our Values</h2>
+                    <p class="text-lg text-muted-foreground">
+                        The principles that guide everything we do
+                    </p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                    <div
+                        class="border-0 shadow text-center rounded-lg overflow-hidden">
+                        <div class="p-6">
+                            <div class="mx-auto mb-4 p-3 rounded-2xl bg-muted/50 w-fit text-primary">
+                                <img src="../assets/aim.png" alt="" class="w-8 h-8">
+                            </div>
+                            <h3 class="text-lg font-semibold">Personalized Guidance</h3>
+                        </div>
+                        <div class="p-6 pt-0">
+                            <p class="text-center text-muted-foreground">Every individual has unique strengths and
+                                aspirations. We provide tailored advice that fits your specific situation.</p>
+                        </div>
                     </div>
-                    <h3 class="text-xl font-bold text-green-600">Find Courses
 
-                    </h3>
-                </div>
-                <div class="">
-                    <p class="text-green-900 text-sm">Discover the best courses and certifications</p>
-                </div>
+                    <div
+                        class="border-0 shadow text-center rounded-lg overflow-hidden">
+                        <div class="p-6">
+                            <div class="mx-auto mb-4 p-3 rounded-2xl bg-muted/50 w-fit text-secondary">
+                                <img src="../assets/bulp.png" alt="" class="w-8 h-8">
+                            </div>
+                            <h3 class="text-lg font-semibold">Evidence-Based Approach</h3>
+                        </div>
+                        <div class="p-6 pt-0">
+                            <p class="text-center text-muted-foreground">Our recommendations are backed by research,
+                                industry insights, and real-world data to ensure accuracy.</p>
+                        </div>
+                    </div>
 
+                    <div
+                        class="border-0 shadow text-center rounded-lg overflow-hidden">
+                        <div class="p-6">
+                            <div class="mx-auto mb-4 p-3 rounded-2xl bg-muted/50 w-fit text-accent">
+                                <img src="../assets/heart.png" alt="" class="w-8 h-8">
+                            </div>
+                            <h3 class="text-lg font-semibold">Student-Centric Focus</h3>
+                        </div>
+                        <div class="p-6 pt-0">
+                            <p class="text-center text-muted-foreground">We genuinely care about your success and are
+                                committed to supporting you throughout your journey.</p>
+                        </div>
+                    </div>
+
+                    <div
+                        class="border-0 shadow  text-center rounded-lg overflow-hidden">
+                        <div class="p-6">
+                            <div class="mx-auto mb-4 p-3 rounded-2xl bg-muted/50 w-fit text-orange-600">
+                                <img src="../assets/world.png" alt="" class="w-8 h-8">
+                            </div>
+                            <h3 class="text-lg font-semibold">Comprehensive Resources</h3>
+                        </div>
+                        <div class="p-6 pt-0">
+                            <p class="text-center text-muted-foreground">From career exploration to skill development,
+                                we provide everything you need in one place.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-
-
-
         </div>
-        </div>
-    </main>
-
-
-
-    <footer class="bg-green-50 h-fit">
+    </div>
+        <footer class="bg-green-50 h-fit">
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-5 m-20 pt-28">
             <div>
                 <div class="flex  gap-4">
@@ -410,6 +338,9 @@
                 });
             });
         });
+
+        // Initialize Lucide icons
+        lucide.createIcons();
     </script>
 </body>
 
