--- a/pages/career.html
+++ b/pages/career.html
@@ -438,7 +438,7 @@
                         </div>
                     </div>
 
-                    
+                    <!-- UX/UI Designer -->
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                         
                         <div
@@ -454,7 +454,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹7.3 High LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹3 to ₹15 LPA </div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -478,7 +478,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹7 to ₹48 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹2 to ₹7 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -502,7 +502,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹2 to ₹5 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹10 to ₹30 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -526,7 +526,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹2 to ₹4 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹10 to ₹20 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -550,7 +550,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹1.2 to ₹7 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹10 to ₹20 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -590,7 +590,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹7.3 High LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹5 to ₹25 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -614,7 +614,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹7 to ₹48 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹4 to ₹12 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -638,7 +638,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹2 to ₹5 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹4 to ₹20 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -662,7 +662,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹2 to ₹4 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹4 to ₹20 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -687,7 +687,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹1.2 to ₹7 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹6 to ₹25 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -727,7 +727,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹7.3 High LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹3 to ₹20 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -752,7 +752,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹7 to ₹48 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹3 to ₹8 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -776,7 +776,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹2 to ₹5 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹3 to ₹7 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -800,7 +800,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹2 to ₹4 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹3 to ₹8 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
@@ -824,7 +824,7 @@
                             <div class="p-6 pt-0 space-y-4">
                                 <div class="space-y-2">
                                     <div class="text-sm text-gray-500">Average Salary</div>
-                                    <div class="text-lg font-semibold text-foreground">₹1.2 to ₹7 LPA</div>
+                                    <div class="text-lg font-semibold text-foreground">₹3 to ₹7 LPA</div>
                                 </div>
                                 <button
                                     class="w-full border border-gray-300 rounded-md px-4 py-2 text-sm font-medium hover:bg-green-700 hover:text-white transition-smooth flex items-center justify-center">
