fotter change finish

--- a/pages/Counseling.html
+++ b/pages/Counseling.html
@@ -441,8 +441,8 @@
             </div>
         </div>
     </div>
-     <footer class="bg-green-50 h-fit">
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-5 m-20 pt-28">
+    <footer class="bg-green-50 h-fit">
+        <div class="grid  grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-5 m-10 lg:m-20 pt-28">
             <div>
                 <div class="flex  gap-4">
                     <svg class="h-8 w-8  group-hover:text-accent transition-smooth" viewBox="0 0 24 24" fill="none"
@@ -478,7 +478,7 @@
                 <a href="" class="hover:text-green-600">Interview Prep</a>
                 <a href="" class="hover:text-green-600">Skill Assessment</a>
             </div>
-            <div>
+            <div class=>
                 <div class="flex flex-col gap-5">
                     <h3 class="mb-2 font-bold">Contact Us</h3>
                     <div>
@@ -491,16 +491,15 @@
                 </div>
             </div>
         </div>
-        <div class="flex justify-between text-sm py-7 px-15">
+        <div class="flex flex-col md:justify-between text-sm py-7 px-10">
             <p>© 2025 CareerGuide. All rights reserved.</p>
-            <div class="flex gap-5">
+            <div class="flex flex-col md:flex-row mt-2 gap-5">
                 <a href="" class="hover:text-green-600">Privacy Policy</a>
                 <a href="" class="hover:text-green-600">Terms of Service</a>
                 <a href="" class="hover:text-green-600">Cookie Policy</a>
             </div>
         </div>
     </footer>
-
 
 
 
