--- a/pages/career.html
+++ b/pages/career.html
@@ -156,8 +156,8 @@
                             <div><img src="../assets/code.png" alt="" class="h-6 w-6"></div>
                         </div>
                         <div>   
-                            <h2 class="text-2xl font-bold text-foreground">Information Technology</h2>
-                            <p class="text-muted-foreground">Build the digital future with cutting-edge technology
+                            <h2 class=" text-xl md:text-2xl font-bold text-foreground">Information Technology</h2>
+                            <p class="text-muted-foreground text-sm">Build the digital future with cutting-edge technology
                                 solutions</p>
                         </div>
                     </div>
@@ -862,7 +862,7 @@
         </div>
     </div>
     <footer class="bg-green-50 h-fit">
-        <div class="grid  grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-5 m-20 pt-28">
+        <div class="grid  grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-5 m-10 lg:m-20 pt-28">
             <div>
                 <div class="flex  gap-4">
                     <svg class="h-8 w-8  group-hover:text-accent transition-smooth" viewBox="0 0 24 24" fill="none"
@@ -898,7 +898,7 @@
                 <a href="" class="hover:text-green-600">Interview Prep</a>
                 <a href="" class="hover:text-green-600">Skill Assessment</a>
             </div>
-            <div>
+            <div class=>
                 <div class="flex flex-col gap-5">
                     <h3 class="mb-2 font-bold">Contact Us</h3>
                     <div>
@@ -911,9 +911,9 @@
                 </div>
             </div>
         </div>
-        <div class="flex justify-between text-sm py-7 px-15">
+        <div class="flex flex-col md:justify-between text-sm py-7 px-10">
             <p>© 2025 CareerGuide. All rights reserved.</p>
-            <div class="flex gap-5">
+            <div class="flex flex-col md:flex-row mt-2 gap-5">
                 <a href="" class="hover:text-green-600">Privacy Policy</a>
                 <a href="" class="hover:text-green-600">Terms of Service</a>
                 <a href="" class="hover:text-green-600">Cookie Policy</a>
